@@ -20,13 +20,13 @@ package net.croz.nrich.registry.configuration.comparator;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class DisplayOrderComparatorTest {
 
-    private final DisplayOrderComparator displayOrderComparator = new DisplayOrderComparator(Arrays.asList("first", "second"));
+    private final DisplayOrderComparator displayOrderComparator = new DisplayOrderComparator(List.of("first", "second"));
 
     @CsvSource({ "first,second,-1", "third,second,1", "first,third,-1" })
     @ParameterizedTest
